# ompi

./: .gitignore  backport_test.txt  backport_test2.txt  backport_test3.txt  compile_commands.json  test.cc
.cache/clangd/index/: IntConstantInitializedVector.c.7D7A7A03BB470C65.idx  IntConstantInitializedVector.h.EB275D19CAE2AC5C.idx  PriorityQueue.c.7F60B9502BFD3129.idx  PriorityQueue.h.435256BBC00C8296.idx  abort_generated.c.EE4527EECA4871A0.idx  accelerator.h.77CB010DB665F959.idx  accelerator_base_frame.c.8470EDCC4CDF2D51.idx  accelerator_base_select.c.1F95E1CC2F64A8F9.idx  accelerator_null_component.c.A4E0D2D53696728D.idx  accelerator_null_component.h.56A7760077D2DB9C.idx  accumulate_generated.c.D443FA86E0B22F26.idx  add_error_class_generated.c.704C7E2B3943AF42.idx  add_error_code_generated.c.AACEA13F67FCC1A0.idx  add_error_string_generated.c.BBA2D1A0581CDE5B.idx  address.c.1B9966408681C0A1.idx  alfg.c.8B970BEA60E1812F.idx  alfg.h.AEE842B069140A91.idx  align.h.EC84A06F77B26E36.idx  allgather_generated.c.33B3186F0BB0A7ED.idx  allgather_init_generated.c.77218D6A33D4507E.idx  allgatherv_generated.c.3D7814718974C209.idx  allgatherv_init_generated.c.54D9F53D7402288F.idx  alloc_mem_generated.c.F53628F3FD69D82A.idx  allocator.h.6BB01648A9F9D904.idx  allocator_base_frame.c.1422B18FEE2EB16B.idx  allocator_basic.c.E7E85E768662B939.idx  allocator_basic.h.58E56DE6A92C9FC1.idx  allocator_bucket.c.D5D7AA00F22E1238.idx  allocator_bucket_alloc.c.31A2FF6CB94EF2E1.idx  allocator_bucket_alloc.h.8564CF639643BC92.idx  allreduce_generated.c.546F3387A75B9EBF.idx  allreduce_init_generated.c.0C58D44F9F55A722.idx  alltoall_generated.c.DF2B751E004A9895.idx  alltoall_init_generated.c.03B8C2EC1C18BCFD.idx  alltoallv_generated.c.C1BA5BFB37F0B5B5.idx  alltoallv_init_generated.c.69A24E3147198FD6.idx  alltoallw_generated.c.7EDBE06B0E399BA0.idx  alltoallw_init_generated.c.2CA7FE6CD4B3DA13.idx  api_f08_generated.c.7D5EEA0073DA250D.idx  arch.c.CEDEA24CC5347F24.idx  (+3087 more)
.github/workflows/: backport-command.yaml  backport.yaml  ompi_mpi4py.yaml
ompi/communicator/: comm_cid.c  comm_request.c
ompi/communicator/ft/: comm_ft_detector.c  comm_ft_reliable_bcast.c
ompi/errhandler/: errhandler.c  errhandler.h  errhandler_invoke.c  errhandler_predefined.c
ompi/include/: mpi.h.in
ompi/instance/: instance.c
ompi/mca/coll/acoll/: coll_acoll_allreduce.c  coll_acoll_reduce.c  coll_acoll_utils.h
ompi/mca/coll/base/: coll_base_allreduce.c  coll_base_exscan.c  coll_base_functions.h  coll_base_gather.c  coll_base_reduce.c  coll_base_reduce_scatter.c  coll_base_reduce_scatter_block.c  coll_base_scan.c
ompi/mca/coll/basic/: coll_basic_reduce_scatter_block.c
ompi/mca/coll/hcoll/: coll_hcoll_ops.c
ompi/mca/coll/tuned/: coll_tuned.h  coll_tuned_allreduce_decision.c  coll_tuned_decision_dynamic.c  coll_tuned_decision_fixed.c  coll_tuned_exscan_decision.c  coll_tuned_gather_decision.c  coll_tuned_reduce_decision.c  coll_tuned_reduce_scatter_block_decision.c  coll_tuned_reduce_scatter_decision.c  coll_tuned_scan_decision.c
ompi/mca/coll/xhc/: coll_xhc_intrinsic.h
ompi/mca/common/monitoring/: common_monitoring.c
ompi/mca/common/ompio/: common_ompio_buffer.c
ompi/mca/op/: op.h
ompi/mca/op/avx/: configure.m4
ompi/mca/op/base/: op_base_frame.c
ompi/mca/op/cuda/: Makefile.am  configure.m4  op_cuda.h  op_cuda_component.c  op_cuda_kernels.cu  op_cuda_session.c
ompi/mca/op/rocm/: Makefile.am  configure.m4  op_rocm.h  op_rocm_component.c  op_rocm_kernels.cpp  op_rocm_session.c
ompi/mca/osc/: osc.h
ompi/mca/osc/monitoring/: osc_monitoring_module.h
ompi/mca/osc/sm/: osc_sm.h  osc_sm_comm.c  osc_sm_component.c
ompi/mca/osc/ubcl/: osc_ubcl.c
ompi/mca/osc/ucx/: osc_ucx.h  osc_ucx_comm.c  osc_ucx_component.c
ompi/mca/pml/base/: pml_base_bsend.c  pml_base_recvreq.h  pml_base_sendreq.c
ompi/mca/pml/ob1/: pml_ob1.c  pml_ob1_progress.c  pml_ob1_recvreq.c
ompi/mpi/c/: Makefile.am  finalized.c.in  get_library_version.c.in  get_version.c.in  initialized.c.in  type_get_contents_c.c  win_get_notify_value.c.in  win_reset_notify_value.c.in  win_set_notify_value.c.in
ompi/mpi/c/profile/: Makefile.am
ompi/mpi/tool/: finalize.c
ompi/mpiext/continue/c/: continuation.h
ompi/op/: Makefile.am  op_gpu_session.c  op_gpu_session.h
ompi/peruse/: peruse.c
ompi/request/: grequestx.c  req_wait.c  request.c  request.h  request_cb.c  request_cb.h
ompi/runtime/: ompi_mpi_abort.c  ompi_mpi_finalize.c  ompi_mpi_init.c
opal/include/: opal_stdatomic.h
opal/include/opal/sys/: atomic.h  atomic_stdc.h
opal/mca/accelerator/base/: accelerator_base_frame.c  base.h
opal/mca/accelerator/cuda/: accelerator_cuda.c
opal/mca/accelerator/rocm/: accelerator_rocm_module.c
opal/mca/btl/sm/: btl_sm_component.c
opal/mca/btl/uct/: btl_uct_device_context.h
opal/mca/common/ucx/: common_ucx_wpool.c
opal/mca/threads/base/: wait_sync.c
opal/runtime/: opal_progress.c  opal_progress.h
oshmem/runtime/: oshmem_shmem_finalize.c
test/asm/: atomic_cmpset.c  atomic_math.c
test/threads/: opal_atomic_thread_bench.c
